Sorted and cleaned up column preferences